<resources>
    <string name="app_name">Moqayda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_registered_mail">Enter your registered email</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="save_new_password">Save new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_code">Enter the code</string>
    <string name="email">Email</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description:</string>
    <string name="select_category">Product Category</string>
    <string name="confirm">Confirm</string>
    <string name="pick_photo">Pick File</string>
    <string name="permission_denied_explanation">You must grant storage permission</string>
    <string name="settings">settings</string>
    <string name="what_are_you_offering">What are you offering?</string>
    <string name="pick_your_category_of_interest">Pick your category of interest</string>
    <string name="add_image"> Add Image</string>
    <string name="delete_image"><u>Delete image</u></string>
    <string name="category_label">Category*</string>
    <string name="usage_alert">After pressing the confirmation button,\n your ad will be published on\n the application, and all users will be able to\n send you barter offers</string>
    <string name="owner_location">Your location</string>
    <string name="a_product_you_want_to_exchange">A product you want to exchange</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="field_requires_100_char">"This field requires at least 100 characters"</string>
    <string name="upload_failed">"Upload Failed"</string>
    <string name="product_uploaded">File uploaded</string>
    <string name="no_enough_space">"No enough space"</string>
    <string name="choose_image">"Please Choose image"</string>
    <string name="details_text">Item Details</string>
    <string name="swap_text">Swap</string>
    <string name="swap_with_text">Swap With: </string>
    <string name="description_text">Description :</string>
    <string name="swap_now_text">Swap Now</string>
    <string name="add_to_favorite_text">Add To Favorite</string>
    <string name="or_text">or</string>
    <string name="sign_in_text">Sign In</string>
    <string name="have_account_text">Already have an account?</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="mobile_text">Mobile Number</string>
    <string name="country_text">Country</string>
    <string name="address_text">Your Address</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="create_account">Create an account</string>
    <string name="registration">Registration</string>
    <string name="verify">Verify</string>
    <string name="item_details">Item Details</string>
    <string name="Swap_items">Swap Items</string>
    <string name="show_original_post">Show original post</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="choose_your_item">Choose item from your items</string>
    <string name="send_request">Send Request</string>
    <string name="items_in_public">Public Items</string>
    <string name="items_in_private">Private Items</string>
    <string name="swap_offers">Swap Offers</string>
    <string name="log_out">Log out</string>
    <string name="request_chat">request chat</string>
    <string name="are_you_want_to_accept">Are You Want to accept?</string>
    <string name="accept">accept</string>
    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="setting">Setting</string>
    <string name="want_exit">Are you sure you want to logout?</string>
    <string name="my_profile">My Profile</string>
    <string name="delete_img">Delete image</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="english_lan">English</string>
    <string name="arabic_lan">اللغة العربية</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_pass">Change Password</string>
    <string name="delete_account">Delete the account</string>
    <string name="want_delete_account">Are you sure you want to delete your account?</string>
    <string name="create">Create</string>
    <string name="Choose_private_items">Choose from your private Items</string>
    <string name="display_user_ads">Display user ads</string>
    <string name="user_information">User Information</string>
    <string name="edit_product">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="post_deleted_successfully">Post deleted successfully</string>
    <string name="filed_to_delete_post">Failed to delete post</string>
    <string name="confirmation">Confirmation</string>
    <string name="remove_product_from_favorite_confirmation">Are you sure you want to do remove this item from favorites ?</string>
    <string name="remove_product_confirmation">If you remove this item, the offers related to it will be removed. Do you want to remove it?</string>
    <string name="maximum_100_characters">This element does not require more than 100 characters</string>
    <string name="chane_image">change image</string>
    <string name="product_updated_successfully">Product updated successfully</string>
    <string name="failed_to_update_product">Failed yo update product</string>
    <string name="user_updated_successfully">User updated successfully</string>
    <string name="failed_to_update_user">Failed to update user</string>
    <string name="update_product_confirmation">Are you sure you want to edit this product ?</string>
    <string name="show_product_details">Show product details</string>
    <string name="product_already_in_your_favorites">This product is already in you favorite items</string>
    <string name="product_added_to_favorite">Product added to favorite</string>
    <string name="details"><u>Details</u></string>
    <string name="my_product">My Product</string>
    <string name="swap_offers_public">Swap Offers Of Public Items</string>
    <string name="delete_item">Delete Item</string>
    <string name="decline">Decline</string>
    <string name="accept_swap_offer_confirmation">Are you sure you want to accept this offer ?</string>
    <string name="swap_done">The swap completed successfully</string>
    <string name="failure_message">Sorry, there was a problem</string>
    <string name="sender_product_not_available">This offer is not available as the sender has already bartered his product. </string>
    <string name="delete_offer">Delete offer</string>
    <string name="receiver_product_not_available">This offer is not available as you have already bartered this product</string>
    <string name="offer_deleted_successfully">Offer Deleted Successfully</string>
    <string name="offer_request_hint">This user sent you a trade-in request for your product and also sent you a message request if you want to negotiate.</string>
    <string name="go_negotiate"><u>go negotiate now</u></string>
    <string name="delete_swap_offer_confirmation">Are you sure you want to decline and delete this offer ?\n</string>
    <string name="item_not_available">This item is not available</string>
    <string name="request_sent">Request sent</string>
    <string name="failed_to_send_request">Error, you have already sent a request for this item</string>
    <string name="noti_title">Someone has sent you a swap offer</string>
    <string name="noti_message">Check your public swap offers, and chat requests</string>
    <string name="completed_barters">Completed Barters</string>
    <string name="sent_offers">Sent offers</string>
    <string name="no_sent_offers">There are no sent offers</string>
    <string name="no_offers">There are no offers</string>
    <string name="block">block this user</string>
    <string name="user_blocked">User blocked successfully</string>
    <string name="block_confirmation">Are you sure you want to block this user ?</string>
    <string name="unblock">unblock</string>
    <string name="un_block_confirmation">Are you sure you want to unblock this user ?</string>
    <string name="user_unblocked">User unblocked successfully.</string>
    <string name="no_blocked_users">There are no blocked users</string>
    <string name="blocked_users">Block List</string>
    <string name="login">Login</string>
    <string name="app_terms">Moqayda is a straightforward and practical application that gives users the opportunity to trade for what they need most WITH NO MONEY, all from their mobile device.\n
        \nIf you want to swap your items, all you must do is enter the item details about your item to enable other users to send you the exchange request.\n
        \nYou can send a swap request with another person whose product you like by selecting an offer from your public items and send the offer.\n
        \nTHE CHAT between you and another person IS ACTIVATED ONLY when he/she sends you a swap offer, and you accept the request offer.
</string>
    <string name="terms_text">Terms</string>
    <string name="no_match">No data match</string>
    <string name="rejected_swap">Rejected swap offer</string>
    <string name="no_internet">Not internet connection</string>
    <string name="cancel_request">Cancel request</string>
    <string name="request_canceled">Request canceled successfully</string>
    <string name="request_swap">Request Swap</string>
    <string name="no_barters">You didn\'t make any barter</string>
    <string name="no_products">"You do not have any posted products "</string>
    <string name="say_something">Say something…</string>
    <string name="restricted_chat">In accordance with the privacy policy, interaction with this user is restricted.</string>
    <string name="cancel_offer_confirmation">Are you sure you want to cancel your offer request?</string>
</resources>