<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.moqayda.ui.password_change.PasswordChangeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="@drawable/background"
        >
        <com.google.android.material.internal.BaselineLayout
            android:id="@+id/baseline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="210dp"
            app:layout_constraintTop_toBottomOf="@id/change_pass_tv"
            />

        <TextView
            android:id="@+id/change_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            style="@style/title_tv_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/bomb_gw"

            />

        <TextView
            android:id="@+id/enter_new_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password"
            app:layout_constraintStart_toStartOf="@id/change_pass_tv"
            app:layout_constraintEnd_toEndOf="@id/change_pass_tv"
            app:layout_constraintTop_toBottomOf="@id/baseline"
            style="@style/sub_title_tv_style"
            android:textSize="15sp"
            android:fontFamily="@font/bomb_gw"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/enter_new_pass_tv"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            layout_error="@{vm.confirmPassError}"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_password"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@{vm.password}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/new_pass_et"
            layout_error="@{vm.confirmPassError}"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@={vm.confirmPass}"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/save_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/new_pass_et"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save_new_password"
            android:background="@drawable/rounded_btn"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:onClick="@{()->vm.saveNewPassword()}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>