<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.moqayda.ui.addProduct.AddProductViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addProductLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputProductName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="true"
            android:hint="@string/product_name"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:helperText=""
            app:helperTextTextColor="#EF5350"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="?attr/shapeAppearanceSmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@={viewModel.productName}"
                app:boxStrokeWidth="4dp"
                app:boxStrokeWidthFocused="2dp"
                app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputProductDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="true"
            android:hint="@string/product_description"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:helperText=""
            app:helperTextTextColor="#EF5350"
            app:layout_constraintEnd_toEndOf="@+id/textInputProductName"
            app:layout_constraintStart_toStartOf="@+id/textInputProductName"
            app:layout_constraintTop_toBottomOf="@+id/textInputProductName"
            app:shapeAppearance="?attr/shapeAppearanceSmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productDescriptionEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@={viewModel.productDescription}"
                app:boxStrokeWidth="4dp"
                app:boxStrokeWidthFocused="2dp"
                app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_category"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textInputProductDescription"
            app:layout_constraintTop_toBottomOf="@+id/textInputProductDescription" />


        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pathImage" />

        <Button
            android:id="@+id/pickButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pick_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoriesSpinner" />

        <TextView
            android:id="@+id/pathImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickButton" />

        <Spinner
            android:id="@+id/categoriesSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/text"
            app:layout_constraintEnd_toEndOf="@+id/textInputProductDescription"
            app:layout_constraintStart_toEndOf="@+id/text"
            app:layout_constraintTop_toTopOf="@+id/text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>