<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.example.moqayda.ui.add_private_product.AddPrivateProductViewModel" />

    </data>

<ScrollView
android:layout_width="match_parent"
android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/addProductLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pickButton"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/layout_add_img_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addImageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/baloo_tamma_2"
            android:text="@string/add_image"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_img_icon" />

        <ImageView
            android:id="@+id/add_img_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_circle_outline_24"
            app:tint="#FFFFFF" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/product_image"
        imgUri="@{viewModel.imageUri}"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/product_img_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickButton"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded2"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/delete_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/delete_image"
        android:textColor="@color/blue"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        tools:visibility="gone"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputProductName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="16dp"
        android:enabled="true"
        android:hint="@string/product_name"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:helperText=""
        app:helperTextTextColor="#EF5350"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_image"
        app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
        layout_error="@{viewModel.productNameError}"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@={viewModel.productName}"
            app:boxStrokeWidth="4dp"
            app:boxStrokeWidthFocused="2dp"
            app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputProductDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:enabled="true"
        android:hint="@string/product_description"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:helperText=""
        app:helperTextTextColor="#EF5350"
        app:layout_constraintEnd_toEndOf="@+id/textInputProductName"
        app:layout_constraintStart_toStartOf="@+id/textInputProductName"
        app:layout_constraintTop_toBottomOf="@+id/textInputProductName"
        app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
        layout_error="@{viewModel.productDescriptionError}"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productDescriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@={viewModel.productDescription}"
            app:boxStrokeWidth="4dp"
            app:boxStrokeWidthFocused="2dp"
            app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />


    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputProductDescription"
        android:onClick="@{()->viewModel.createPrivateProduct()}"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>